<?xml version="1.0"?>
<package format="2">
  <name>choreonoid_ros_odens</name>
  <version>0.1.0</version>
  <description>The package for using Choreonoid as a ROS node (Masutani Lab version)</description>
  <maintainer email="odens.oecu@gmail.com">Masutani Lab, Osaka Ele.-Comm. Univ.</maintainer>
  <license>MIT</license>
  <author email="odens.oecu@gmail.com">Masutani Lab, Osaka Ele.-Comm. Univ.</author>
   <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
